<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Escort</string>
    <string name="action_settings">Settings</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="endereco">Endereço</string>
    <string name="email">E-mail</string>
    <string name="celular">Celular</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="enviar">Enviar</string>
    <string name="title_activity_home">Home do Usuário</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="title_activity_rotas">Rotas</string>
    <string name="title_activity_homecondutor">Home do Condutor</string>
    <string name="title_activity_notificar">Notificar</string>
    <string name="title_activity_notification">Notificação Recebida</string>
    <string name="title_activity_presenca">Presenca</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_criar_rota">CriarRota</string>
    <string name="title_activity_add_usuario">Adicionar Usuário</string>
    <string name="title_activity_lista_usuarios">Lista Usuários</string>
    <string name="title_activity_google_maps">Mapas</string>
    <string name="title_activity_cadastro_usuario">Cadastro Usuário</string>
    <string name="title_activity_register">Registro de Usuário</string>
    <string name="title_activity_main">Notificações</string>
    <string name="gcm_registered">De GCM: Aparellho registrado com sucesso!</string>
    <string name="gcm_unregistered">De GCM: Aparelho desregistrado com sucesso!</string>
    <string name="gcm_notregistered">De GCM: Aparelho não registrado!</string>
    <string name="gcm_alreadyregistered">De GCM: Aparelho já registrado!</string>
    
    <string name="gcm_message">De GCM: Você tecebeu uma notificação!</string>
    <string name="gcm_error">De GCM: Um erro desconhecido ocorreu. Tente novamente!</string>
    <string name="gcm_recoverable_error">De GCM: Um erro desconhecido ocorreu.</string>
    <string name="gcm_deleted">De GCM: Serveidor deletou mensagens pendentes!</string>
    <string name="server_registering">De Servidor: Tentando registrar aparelho no servidor.</string>
    <string name="server_registered">De Servidor: Aparelho adicionado com sucesso!</string>
    <string name="server_unregistered">De Servidor: Aparelho removido com sucesso!</string>
    <string name="server_register_error">De Servidor: Não foi possível registrar aparelho no servidor. Tente novamente!.</string>
    <string name="server_unregister_error">De Servidor: Não foi possível remover registro do aparelho no servidor. Tente novamente!.</string>
    <string name="cidade">Cidade</string>
    <string name="salvar">Salvar</string>
    <string name="novo_motorista">Novo Motorista</string>
    <string name="logout">Logout</string>
    <string name="trocar_senha">Trocar Senha</string>
    <string name="entrar">Entrar</string>
    <string name="nome_rota">Nome da Rota</string>
    <string name="criar">Criar</string>
    <string name="motorista">Motorista</string>
	<string name="error_config">Por favor, remova a aplicação e instale novamente.</string>
	<string name="registrado_gcm">Registrado no Google Cloud Message</string>
	<string name="registrar">Registrar</string>
	
	<string name="notificar_transito">Trânsito Intenso! Possível Atraso.</string>
	<string name="notificar_mecanico">Problemas Mecânicos! Possível Atraso.</string>
	<string name="notificar_hospital">Emergência! Destino hospital mais próximo.</string>
	<string name="notificar_acidente">Acidente sem danos! Possível Atraso.</string>
	<string name="notificar_abastecimento">Abastecimento! Possível atraso.</string>
	
	<string name="notificar_ausencia">Rota iniciada e usuário está ausente.</string>
	<string name="notificar_presenca">Rota iniciada e usuário está presente.</string>
	<string name="notificar_ausencia_programada">Ausência programada. </string>
	
	<string name="notificar_rotainiciada">Uma nova rota foi iniciada. Vizualise o mapa no botão rota.</string>
	<string name="notificar_rotafinalizada">A rota foi finalizada.</string>
	
	<string name="notificar_undefined">Notificação não identificada.</string>
	<string name="perfil_motorista">Motorista</string>
	<string name="perfil_responsavel">Responsável</string>
	<string name="perfil_usuario">Usuário</string>

	<string name="title_msg_registerfailed">Registrar Aparelho</string>
	<string name="body_msg_registerinternetfailed">Verifique a conexão com a internet.</string>
	
	<string name="title_msg_loginfailed">Buscar Usuário</string>
	<string name="body_msg_loginnotfound">Usuário não encontrado!</string>
	
	<string name="title_msg_rotasfailed">Buscar Rotas</string>
	<string name="body_msg_rotasnotfound">Rota não encontrada!</string>
	<string name="body_msg_rotasinvalid">Não existe uma rota iniciada para visualização.</string>
	<string name="body_msg_rotasnotstarted">A rota foi iniciada mas não esta em andamento. Aguarde!</string>
	
	<string name="title_msg_sessionfailed">Buscar Sessão</string>
	<string name="body_msg_sessionnotfound">Usuário não encontrado. Efetue Login novamente.</string>
	
	<string name="title_msg_notificationfailed">Enviar Notificação.</string>
	<string name="body_msg_notificationinvalid">Não existe uma rota iniciada para envio de notificações.</string>
	<string name="title_msg_notificationsend">Enviar Notificação.</string>
	<string name="body_msg_notificationfailed">Envio de notifiacação falhou. Tente novamente!</string>
	<string name="body_msg_notificationsuccess">Notificação enviada com sucesso.</string>
	<string name="body_msg_notificationvalidate">Data hora menor que a data hora atual. Informe uma data futura.</string>
	<string name="title_msg_notificarausencia">Ausência Programada</string>
	<string name="body_msg_notificarausencia">Confirma Ausência na data e hora selecionada ?</string>
			
	<string name="title_msg_cadastrofailed">Manter Usuário</string>
	<string name="title_msg_cadastrodesvincular">Desvincular usuário</string>
	<string name="body_msg_cadastrodesvincular">Usuário desvinculado da rota com sucesso!</string>
	<string name="body_msg_cadastrodesvincularfalhou">Não foi possível desvincular usuário da rota. Tente novamente!</string>
	<string name="body_msg_cadastronotfound">Usuário não encontrado!</string>
	<string name="body_msg_cadastroerror">Erro ao cadastrar usuário.</string>	
	<string name="body_msg_cadastropasswordfailed">Senha Inválida! Digite uma nova senha.</string>
	<string name="body_msg_cadastroupdatefailed">Falha ao atualizar usuário.</string>		
	<string name="remove_user">Remover Usuário da rota ?</string>
	
	
	
	<string name="title_msg_presencafailed">Marcar Presença</string>
	<string name="body_msg_presencainvalid">Não existe uma rota iniciada para efetivar presenças.</string>
	<string name="body_msg_presencalistfailed">Busca de usuários da rota falhou.</string>
		
	<string name="perfil_prompt">Selecione um perfil</string>
	<string-array name="perfil_array">
        <item>Responsável</item>
        <item>Usuário</item>
        <item>Motorista</item>
    </string-array>
	<string-array name="perfil_array_user">
        <item>Responsável</item>
        <item>Usuário</item>
    </string-array>
        <string name="confirmar">Confirmar</string>
        <string name="cancelar">Cancelar</string>
        <string name="test">Simular Rota</string>
</resources>